--- a/src/components/all.scss
+++ b/src/components/all.scss
@@ -68,211 +68,260 @@ body {
  
 }
 
-main {
-  margin: 0px auto;
-  width: 100%;
-  max-width: rem(1600);
-  min-height: 100vh;
-  padding: 0 rem(150);
-  box-sizing: border-box;
-}
-
-header {
-  width: 100%;
-  transition: top 0.6s, box-shadow 0.3s;
+.loader-wrapper {
   position: fixed;
   top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: $blue-gray;;
 
-  &.scroll-down {
-    top: rem(-100);
+  img {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+}
+
+.loading {
+  animation: preloader 1s infinite ease-in-out;
+  background-color: $dark-teal;
+  border-radius: 100%;
+  height: rem(100);
+  width: rem(100);
+}
+
+@keyframes content-firstload {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+.content {
+  animation: content-firstload 0.3s ease-in;
+
+  main {
+    margin: 0px auto;
+    width: 100%;
+    max-width: rem(1600);
+    min-height: 100vh;
+    padding: 0 rem(150);
+    box-sizing: border-box;
   }
 
-  &.scroll-up {
-    backdrop-filter: blur(rem(3));
-    background-color: #1f2833e6;
-    box-shadow: -1px 1px 15px -10px #e9f3ff5c;
+  header {
+    width: 100%;
+    transition: top 0.6s, box-shadow 0.3s;
+    position: fixed;
     top: 0;
-  }
 
-  .navbar {
-    display: flex;
-    align-items: center;
-    position: relative;
-    padding: 0 rem(50);
-    height: rem(100);
+    &.scroll-down {
+      top: rem(-100);
+    }
 
-    .container {
+    &.scroll-up {
+      backdrop-filter: blur(rem(3));
+      background-color: #1f2833e6;
+      box-shadow: -1px 1px 15px -10px #e9f3ff5c;
+      top: 0;
+    }
+
+    .navbar {
       display: flex;
-      justify-content: space-between;
       align-items: center;
-      width: 100%;
+      position: relative;
+      padding: 0 rem(50);
+      height: rem(100);
 
-      .navbar-menu {
-        transition: 0.4s;
-        
-        &.burger-active {
-          .navbar-mobile {
-            right: 0;
-          }
+      .container {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        width: 100%;
 
-          &:before {
-            content: '';
-            position: fixed;
-            top: 0;
-            right: 0;
-            width: 100%;
-            height: 100%;
-            backdrop-filter: blur(rem(5));
-            z-index: -1;
-          }
-        }
-
-        .navbar-burger {
-          display: none;
-          height: rem(40);
-          width: rem(40);
-          background-color: transparent;
-          border: none;
-          position: absolute;
-          top: 50%;
-          right: rem(50);
-          transform: translateY(-50%);
-          padding: 0;
-          z-index: 2;
-          
-          @include breakpoint(small-desktop) {
-            display: block;
-          }
-        }
-
-        .navbar-mobile {
-          display: none;
-          align-items: center;
-          justify-content: center;
-          position: fixed;
-          height: 100%;
-          background: $blue-gray;
-          top: 0;
-          width: rem(400);
-          right: rem(-400);
-          padding: rem(50);
-          box-sizing: border-box;
-          z-index: 1;
-          transition: all 0.3s;
-
-          @include breakpoint(small-desktop) {
-            display: flex;
-          }
-
-          nav {
-            display: flex;
-            flex-direction: column;
-            width: 100%;
-
-            a {
-              text-align: center;
-              font-size: rem(24);
-              margin-bottom: rem(25);
-
-              span {
-                display: block;
-                padding: 0;
-                font-size: rem(18);
-                line-height: 1;
-              }
-
-              &.resume {
-                width: 65%;
-                margin: rem(25) auto 0;
-                font-size: rem(18);
-              }
-            }
-          }
-        }
-
-        .navbar-menu, .navbar-mobile {
-          &:not(.navbar-mobile) {
-            @include breakpoint(small-desktop) {
-              display: none;
-            }  
-          }
-          
-          a {
-            font-family: 'Source Code Pro', monospace;
-            padding: 0 rem(15);
+        .navbar-brand {
+          .site-logo {
+            font-size: rem(24);
+            font-family: "Source Code Pro", monospace;
             text-decoration: none;
-            font-size: rem(14);
-            color: $white;
-  
-            &:hover {
-              color: $teal;
+            color: white;
+            letter-spacing: rem(-2);
+            transition: letter-spacing 0.6s;
+          }
+        }
+
+        .navbar-menu {
+          transition: 0.4s;
+          
+          &.burger-active {
+            .navbar-mobile {
+              right: 0;
             }
-  
-            span {
-              padding-right: rem(5);
-              color: $teal;
+
+            &:before {
+              content: '';
+              position: fixed;
+              top: 0;
+              right: 0;
+              width: 100%;
+              height: 100%;
+              backdrop-filter: blur(rem(5));
+              z-index: -1;
             }
-  
-            &.resume {
-              display: inline-block;
-              width: rem(80);
-              border: rem(1) solid $teal;
-              padding: rem(10);
-              border-radius: rem(5);
-              color: $teal;
-              margin-left: rem(15);
-              text-align: center;
-              box-sizing: border-box;
+          }
+
+          .navbar-burger {
+            display: none;
+            height: rem(40);
+            width: rem(40);
+            background-color: transparent;
+            border: none;
+            position: absolute;
+            top: 50%;
+            right: rem(50);
+            transform: translateY(-50%);
+            padding: 0;
+            z-index: 2;
+            
+            @include breakpoint(small-desktop) {
+              display: block;
+            }
+          }
+
+          .navbar-mobile {
+            display: none;
+            align-items: center;
+            justify-content: center;
+            position: fixed;
+            height: 100%;
+            background: $blue-gray;
+            top: 0;
+            width: rem(400);
+            right: rem(-400);
+            padding: rem(50);
+            box-sizing: border-box;
+            z-index: 1;
+            transition: all 0.3s;
+
+            @include breakpoint(small-desktop) {
+              display: flex;
+            }
+
+            nav {
+              display: flex;
+              flex-direction: column;
+              width: 100%;
+
+              a {
+                text-align: center;
+                font-size: rem(24);
+                margin-bottom: rem(25);
+
+                span {
+                  display: block;
+                  padding: 0;
+                  font-size: rem(18);
+                  line-height: 1;
+                }
+
+                &.resume {
+                  width: 65%;
+                  margin: rem(25) auto 0;
+                  font-size: rem(18);
+                }
+              }
+            }
+          }
+
+          .navbar-menu, .navbar-mobile {
+            &:not(.navbar-mobile) {
+              @include breakpoint(small-desktop) {
+                display: none;
+              }  
+            }
+            
+            a {
+              font-family: 'Source Code Pro', monospace;
+              padding: 0 rem(15);
+              text-decoration: none;
+              font-size: rem(14);
+              color: $white;
+    
+              &:hover {
+                color: $teal;
+              }
+    
+              span {
+                padding-right: rem(5);
+                color: $teal;
+              }
+    
+              &.resume {
+                display: inline-block;
+                width: rem(80);
+                border: rem(1) solid $teal;
+                padding: rem(10);
+                border-radius: rem(5);
+                color: $teal;
+                margin-left: rem(15);
+                text-align: center;
+                box-sizing: border-box;
+              }
             }
           }
         }
       }
     }
   }
-}
 
-.landing {
-  height: 100vh;
-  display: flex;
-  align-items: flex-start;
-  justify-content: center;
-  flex-direction: column;
-
-  .before-title {
-    font-family: 'Source Code Pro', monospace;
-    font-size: rem(16);
-    color: $teal;
-    margin-bottom: rem(15);
-  }
-
-  .title {
-    font-size: rem(80);
+  .landing {
+    height: 100vh;
     display: flex;
+    align-items: flex-start;
+    justify-content: center;
     flex-direction: column;
-    margin: 0;
 
-    strong {
-      color: $white;
+    .before-title {
+      font-family: 'Source Code Pro', monospace;
+      font-size: rem(16);
+      color: $teal;
+      margin-bottom: rem(15);
     }
 
-    span {
+    .title {
+      font-size: rem(80);
+      display: flex;
+      flex-direction: column;
+      margin: 0;
+
+      strong {
+        color: $white;
+      }
+
+      span {
+        color: $gray;
+      }
+    }
+
+    .short-description {
+      max-width: rem(540);
       color: $gray;
+      font-size: rem(20);
+      margin: rem(25) 0 0 0;
+      line-height: 1.4;
     }
   }
 
-  .short-description {
-    max-width: rem(540);
-    color: $gray;
-    font-size: rem(20);
-    margin: rem(25) 0 0 0;
-    line-height: 1.4;
+  .about {
+    height: 100vh;
+    display: flex;
+    align-items: flex-start;
+    justify-content: center;
+    flex-direction: column;
   }
-}
 
-.about {
-  height: 100vh;
-  display: flex;
-  align-items: flex-start;
-  justify-content: center;
-  flex-direction: column;
 }
