--- a/src/styles/all.scss
+++ b/src/styles/all.scss
@@ -157,6 +157,8 @@ body {
         }
 
         .navbar-menu {
+          display: flex;
+          align-items: center;
           transition: 0.4s;
           
           &.burger-active {
