--- a/src/styles/all.scss
+++ b/src/styles/all.scss
@@ -169,10 +169,9 @@ body {
         .navbar-brand {
           .site-logo {
             font-size: rem(24);
-            font-family: "Source Code Pro", monospace;
             text-decoration: none;
+            font-weight: 600;
             color: white;
-            letter-spacing: rem(-2);
             transition: letter-spacing 0.6s;
           }
         }
@@ -313,6 +312,33 @@ body {
     }
   }
 
+  .section-name {
+    font-family: "Source Code Pro", monospace;
+    font-size: rem(22);
+    color: $teal;
+    margin: 0 0 rem(12) 0;
+    letter-spacing: rem(-2);
+  }
+
+  .description {
+    color: $gray;
+    font-size: rem(20);
+    line-height: 1.4;
+    max-width: rem(1000);
+    margin: 0 0 rem(25) 0;
+    white-space: pre-line;
+
+    p {
+      &:first-child {
+        margin-top: 0;
+      }
+
+      a {
+        color: $dark-teal;
+      }
+    }
+  }
+
   .landing {
     height: 100vh;
     display: flex;
@@ -387,37 +413,10 @@ body {
     justify-content: center;
     flex-direction: column;
 
-    .section-name {
-      font-family: "Source Code Pro", monospace;
-      font-size: rem(22);
-      color: $teal;
-      margin: 0 0 rem(12) 0;
-      letter-spacing: rem(-2);
-    }
-
-    .description {
-      color: $gray;
-      font-size: rem(20);
-      line-height: 1.4;
-      max-width: rem(1000);
-      margin: 0 0 rem(25) 0;
-      white-space: pre-line;
-
-      p {
-        &:first-child {
-          margin-top: 0;
-        }
-
-        a {
-          color: $dark-teal;
-        }
-      }
-    }
-
     .techstack-container {
       display: flex;
-      justify-content: space-between;
-      width: 70%;
+      gap: rem(75);
+      width: 100%;
 
       .techstack-column {
         .techstack-title {
@@ -434,6 +433,33 @@ body {
           li {
             color: $gray;
             margin-bottom: rem(10);
+          }
+        }
+      }
+    }
+  }
+
+  .expertise {
+    .companies-container {
+      .title-company {
+        display: flex;
+        font-weight: 500;
+        
+        p {
+          margin: 0;
+        }
+
+        .title {
+          color: $white;
+        }
+
+        .company {
+          color: $dark-teal;
+          margin-left: rem(5);
+
+          &:before {
+            content: '@';
+            margin-right: rem(5);
           }
         }
       }
